# Temporum

./: .gitignore  README.md  ai.py  algorithms.py  bot.py  constants.py  conversation_creator.py  interaction.py  isometric.py  main.py  map_tile.py  mapdata.py  player.py  puzzle.py  pyproject.toml  shaders.py  tiles.py  turn.py  ui.py  views.py  vision.py
assets/: Aedan_ports.aseprite  Identifiers.aseprite  Title.aseprite  character refrence.aseprite  craft.aseprite  iso_player_character.aseprite  iso_refrence.aseprite  iso_select_tile.aseprite  iso_select_tile_sheet.aseprite  iso_tile_hidden_wall.aseprite  iso_tile_hidden_wall_sheet.aseprite  iso_tile_refrence.aseprite  iso_tile_refrence_wall.aseprite  iso_tile_refrence_wall_sheet.aseprite  metal_wall_base.aseprite
assets/POI/: 1-1.aseprite  2-1.aseprite  NotePoi.aseprite  Poi base.aseprite  poi_highlight.aseprite
assets/Tools/: convocreatortab.aseprite
assets/characters/: Character Options.aseprite  (+6 more)
audio/: Dagmans Hunt Loop.json  Perpetual Begin.json  Perpetual Loop.json  The Workshop 44100Hz Mono 16 bit.wav.asd  The Workshop 44100Hz Mono.wav.asd  The Workshop 44100Hz.wav.asd  The Workshop.wav.asd
data/: LoopTestThree.json  Sample Conversation.json  WorkroomEntrance.json  conversations.json  demo_1.json  map_data.json  speaker.json  special_tiles.json  tiles.json
shaders/: aracde_vertex.glsl  basic_vertex.glsl  isometric_test_fs.glsl  vision_field_frag.glsl  vision_field_vertex.glsl  vision_frag.glsl  vision_to_isometric.glsl
temporum/: __main__.py
tiled/: basic_tilemap_sprites.aseprite  loadingbay.tsx
(+64 files in other folders)
