[project]
name="Temporum"
description="A small tech demo made for a High School final project"
license = {text = "MIT License"}
readme="README.md"
version="1.1"
dependencies=[
    "arcade@ git+https://github.com/pythonarcade/arcade#egg=development"
]
requires-python= ">= 3.11"
authors =  [
    {name = "DragonMoffon", email = "dumpy.spam.man@gmail.com"}
]
maintainers = [
    {name = "DragonMoffon", email = "dumpy.spam.man@gmail.com"}
]

[tool.setuptools]
packages = ["temporum"]

